Change app name to BYSEL (v29 2.3.1)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">BYSEL Trader</string>
+    <string name="app_name">BYSEL</string>
     <string name="tab_watchlist">Watchlist</string>
     <string name="tab_portfolio">Portfolio</string>
     <string name="tab_alerts">Alerts</string>
